--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "": "file:",
     "@astrojs/react": "^4.3.0",
-    "@astrojs/starlight": "^0.31.1",
+    "@astrojs/starlight": "^0.35.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "astro": "^5.1.5",
+    "astro": "^5.12.6",
     "astro-i18next": "^1.0.0-beta.21",
     "i18n": "^0.15.1",
     "react-icons": "^5.5.0",
+    "rehype-callouts": "^2.1.2",
+    "remark-directive": "^4.0.0",
     "sass": "^1.89.2",
     "scss": "^0.2.4",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "unist-util-visit": "^5.0.0"
   }
 }
