--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro": "^5.12.6",
     "astro-i18next": "^1.0.0-beta.21",
     "i18n": "^0.15.1",
+    "mark.js": "^8.11.1",
     "react-icons": "^5.5.0",
     "rehype-callouts": "^2.1.2",
     "remark-directive": "^4.0.0",
